--- a/JaiSmi/bin/JaiSmi.dll.config
+++ b/JaiSmi/bin/JaiSmi.dll.config
@@ -63,6 +63,6 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;F:\Personal Projects\JaiSmi\JaiSmi\JaiSmi\App_Data\SJ.db&quot;'" providerName="System.Data.EntityClient" />
+    <add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|SJ.db&quot;'" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
