--- a/JaiSmi/packages.config
+++ b/JaiSmi/packages.config
@@ -6,15 +6,23 @@
   <package id="Forloop.HtmlHelpers" version="1.2.0.0" targetFramework="net452" />
   <package id="jQuery" version="2.2.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net452" />
