--- a/JaiSmi/JaiSmi.csproj
+++ b/JaiSmi/JaiSmi.csproj
@@ -155,6 +155,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\Admin\Content\LessInput\Account.css">
+      <DependentUpon>Account.less</DependentUpon>
+    </Content>
+    <Content Include="Areas\Admin\Content\LessInput\Account.min.css">
+      <DependentUpon>Account.css</DependentUpon>
+    </Content>
     <Content Include="Areas\Admin\Content\LessInput\Admin.css">
       <DependentUpon>Admin.less</DependentUpon>
     </Content>
@@ -231,6 +237,12 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
+    <Content Include="Areas\Admin\Content\LessInput\Account.less" />
+    <Content Include="Areas\Admin\Content\LessInput\Account.css.map">
+      <DependentUpon>Account.css</DependentUpon>
+    </Content>
+    <Content Include="Areas\Admin\Views\Account\Home.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -654,7 +666,7 @@
     <Content Include="App_Data\SJ.db" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Admin\Views\Admin\Blog\ImportPosts.cshtml" />
+    <Content Include="Areas\Admin\Views\Blog\ImportPosts.cshtml" />
     <Content Include="Areas\Admin\Content\LessInput\Admin.less" />
     <Content Include="Areas\Admin\Content\LessInput\Admin.css.map">
       <DependentUpon>Admin.css</DependentUpon>
@@ -737,7 +749,7 @@
     <Compile Include="App_Start\UserMembership.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Code\BlogImporter.cs" />
-    <Compile Include="Areas\Admin\Controllers\AdminController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AccountController.cs" />
     <Compile Include="Areas\Admin\Controllers\BlogController.cs" />
     <Compile Include="Areas\Blog\BlogAreaRegistration.cs" />
     <Compile Include="Areas\Blog\Controllers\BlogController.cs" />
