--- a/JaiSmi/Web.config
+++ b/JaiSmi/Web.config
@@ -64,7 +64,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.104.0" newVersion="1.0.104.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.104.0" newVersion="1.0.106.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -80,13 +80,12 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|SJ.db&quot;'" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-  <system.data>
+    <!--<add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|SJ.db&quot;'" providerName="System.Data.EntityClient" />-->
+  <add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;F:\Personal Projects\JaiSmi\JaiSmi\JaiSmi\App_Data\SJ.db&quot;'" providerName="System.Data.EntityClient" /></connectionStrings>
+<system.data>
     <DbProviderFactories>
 		<remove invariant="System.Data.SQLite.EF6" />
 		<add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
 		<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
 	</DbProviderFactories>
-  </system.data>
-</configuration>
+  </system.data></configuration>
