--- a/JaiSmi/Web.config
+++ b/JaiSmi/Web.config
@@ -36,7 +36,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -48,19 +48,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
@@ -81,7 +81,9 @@
   </entityFramework>
   <connectionStrings>
     <!--<add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|SJ.db&quot;'" providerName="System.Data.EntityClient" />-->
-  <add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;F:\Personal Projects\JaiSmi\JaiSmi\JaiSmi\App_Data\SJ.db&quot;'" providerName="System.Data.EntityClient" /></connectionStrings>
+	<add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;F:\Personal Projects\JaiSmi\JaiSmi\JaiSmi\App_Data\SJ.db&quot;'" providerName="System.Data.EntityClient" />
+	<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OwinTestApp-20180730100204.mdf;Initial Catalog=aspnet-OwinTestApp-20180730100204;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 <system.data>
     <DbProviderFactories>
 		<remove invariant="System.Data.SQLite.EF6" />
