--- a/JaiSmi/JaiSmi.csproj
+++ b/JaiSmi/JaiSmi.csproj
@@ -43,6 +43,10 @@
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AspNet.Identity.SQLite, Version=1.0.6785.27026, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libraries\AspNet.Identity.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -57,10 +61,6 @@
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.2\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.2\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Owin, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -271,7 +271,10 @@
       <DependentUpon>SJModel.edmx</DependentUpon>
       <LastGenOutput>SJModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Libraries\AspNet.Identity.SQLite.dll.config" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
+    <Content Include="Libraries\AspNet.Identity.SQLite.dll" />
+    <Content Include="Libraries\AspNet.Identity.SQLite.pdb" />
     <Content Include="Nuget_PM.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -750,7 +753,6 @@
     <Content Include="Scripts\Home\Home.js" />
     <Content Include="Scripts\ScriptsLib\namespace\Namespace.js" />
     <Content Include="Scripts\Shared\Shared.js" />
-    <Content Include="SQLiteIdentity.sql" />
     <Content Include="SQLScripts\Create_Table_Scripts.sql" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
