--- a/JaiSmi/bin/JaiSmi.dll.config
+++ b/JaiSmi/bin/JaiSmi.dll.config
@@ -82,7 +82,8 @@
   <connectionStrings>
     <!--<add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;|DataDirectory|SJ.db&quot;'" providerName="System.Data.EntityClient" />-->
 	<add name="SJEntities" connectionString="metadata=res://*/DAL.EntityModel.SJModel.csdl|res://*/DAL.EntityModel.SJModel.ssdl|res://*/DAL.EntityModel.SJModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;F:\Personal Projects\JaiSmi\JaiSmi\JaiSmi\App_Data\SJ.db&quot;'" providerName="System.Data.EntityClient" />
-	<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OwinTestApp-20180730100204.mdf;Initial Catalog=aspnet-OwinTestApp-20180730100204;Integrated Security=True" providerName="System.Data.SqlClient" />
+	<!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OwinTestApp-20180730100204.mdf;Initial Catalog=aspnet-OwinTestApp-20180730100204;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+	<add name="DefaultConnection" connectionString="Data Source=|DataDirectory|SJ.db" providerName="System.Data.SQLite" />
   </connectionStrings>
 <system.data>
     <DbProviderFactories>
