--- a/JaiSmi/Web.config
+++ b/JaiSmi/Web.config
@@ -85,10 +85,17 @@
 	<!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-OwinTestApp-20180730100204.mdf;Initial Catalog=aspnet-OwinTestApp-20180730100204;Integrated Security=True" providerName="System.Data.SqlClient" />-->
 	<add name="DefaultConnection" connectionString="Data Source=|DataDirectory|SJ.db" providerName="System.Data.SQLite" />
   </connectionStrings>
-<system.data>
+  <system.data>
     <DbProviderFactories>
 		<remove invariant="System.Data.SQLite.EF6" />
 		<add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
 		<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
 	</DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <system.webServer>
+	  <staticContent>
+		<remove fileExtension=".svg" />
+		<mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+	  </staticContent>
+  </system.webServer>
+</configuration>
